--- a/pictoment/package.json
+++ b/pictoment/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "jquery": "^3.7.1",
+    "nes.icons": "^2.0.1",
     "vue": "^3.3.13"
   },
   "devDependencies": {
